[package]
name = "reqray"
description = "Log 'request x-rays' for rust programs instrumented with `tracing`."
version = "0.2.3-alpha.0"
authors = ["Peter Kolloch <info@eigenvalue.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kolloch/reqray"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
quanta = "0.6"

[dev-dependencies]
criterion = "0.3"
indoc = "1.0"
tracing-futures = { version = "0.2", features = ["tokio", "futures-03", "std-future"]}
futures = "0.3"
tokio = { version = "0.3", features = ["full"] }
async-std = "1.8"
tracing-appender = "0.1"

[[bench]]
name = "overhead"
harness = false